# audio-router

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README-DEV.md  README.md  env.example  launcher.py  logging.yaml  manage_subscriptions.py  manage_urls.py  pyproject.toml  requirements.txt  run_api.py  start_bot.py  test_architecture.py  websocket_relay.py
bots/: audio_handler.py  audiobroadcast_bot.py  audioforwarder_bot.py  audioreceiver_bot.py  listener_bot.py  logging_config.py  main_bot.py  speaker_bot.py
bots/config/: __init__.py  simple_config.py
bots/core/: __init__.py  access_control.py  audio_relay_server.py  audio_router.py  bot_manager.py  process_manager.py  section_manager.py
docs/: architecture.md
examples/: basic_setup.env  production.env
scripts/: __init__.py  setup_dev.py
src/discord_audio_router/: __init__.py
src/discord_audio_router/api/: README.md  __init__.py  app.py  server.py
src/discord_audio_router/audio/: __init__.py  buffers.py  handlers.py  sources.py
src/discord_audio_router/bots/: __init__.py  bot_core.py  forwarder_bot.py  main_bot.py  receiver_bot.py
src/discord_audio_router/bots/commands/: base.py  broadcast_commands.py  info_commands.py  setup_commands.py
src/discord_audio_router/bots/core/: bot_core.py
src/discord_audio_router/bots/forwarder_bot/: __init__.py
src/discord_audio_router/bots/forwarder_bot/core/: __init__.py  bot_core.py
src/discord_audio_router/bots/forwarder_bot/handlers/: __init__.py  event_handlers.py  websocket_handlers.py
src/discord_audio_router/bots/forwarder_bot/utils/: __init__.py  config.py  performance.py
src/discord_audio_router/bots/handlers/: event_handlers.py
src/discord_audio_router/bots/main_bot/: __init__.py
src/discord_audio_router/bots/main_bot/commands/: __init__.py  base.py  broadcast_commands.py  control_panel_commands.py  info_commands.py  setup_commands.py
src/discord_audio_router/bots/main_bot/core/: __init__.py  bot_core.py
src/discord_audio_router/bots/main_bot/handlers/: __init__.py  event_handlers.py
src/discord_audio_router/bots/main_bot/utils/: __init__.py  control_panel_storage.py  control_panel_ui.py  embed_builder.py
src/discord_audio_router/bots/receiver_bot/: __init__.py
src/discord_audio_router/bots/receiver_bot/core/: __init__.py  bot_core.py
src/discord_audio_router/bots/receiver_bot/handlers/: __init__.py  audio_handlers.py  event_handlers.py  websocket_handlers.py
src/discord_audio_router/bots/receiver_bot/utils/: __init__.py  config.py  performance.py
src/discord_audio_router/bots/utils/: __init__.py  embed_builder.py  permission_utils.py
src/discord_audio_router/config/: __init__.py  settings.py
src/discord_audio_router/core/: __init__.py  access_control.py  audio_router.py  bot_manager.py  process_manager.py  section_manager.py  section_storage.py  types.py
src/discord_audio_router/infrastructure/: __init__.py  exceptions.py  logging.py  logging_manager.py
src/discord_audio_router/networking/: __init__.py  websocket_server.py
src/discord_audio_router/subscription/: README.md  __init__.py  database.py  discord_api.py  models.py  subscription_manager.py
src/discord_audio_router/websockets/client/: __init__.py  websocket_client.py
src/discord_audio_router/websockets/core/: connection_manager.py
src/discord_audio_router/websockets/server/: __init__.py  relay_server.py
tests/: __init__.py  conftest.py  test_architecture.py
tests/unit/test_core/: test_audio_router.py
(+7 files in other folders)
